--- a/aiogramBariev/requirements.txt
+++ b/aiogramBariev/requirements.txt
@@ -9,18 +9,27 @@ asyncpg==0.29.0
 attrs==23.2.0
 certifi==2024.6.2
 Django==5.0.6
+et-xmlfile==1.1.0
 frozenlist==1.4.1
 greenlet==3.0.3
 idna==3.7
 magic-filter==1.0.12
 multidict==6.0.5
+numpy==1.26.4
+openpyxl==3.1.3
+pandas==2.2.2
 pillow==10.3.0
 psycopg2-binary==2.9.9
 pydantic==2.7.3
 pydantic_core==2.18.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
+six==1.16.0
 SQLAlchemy==2.0.30
 sqlparse==0.5.0
 typing_extensions==4.12.1
+tzdata==2024.1
+xlrd==2.0.1
+XlsxWriter==3.2.0
 yarl==1.9.4
-pandas~=2.2.2
