--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 version: "3.10"
 
 services:
+  django:
+    container_name: django
+    build:
+      dockerfile: aiogramBariev/Dockerfile
+    command:
+      - "python"
+      - "manage.py"
+      - "runserver"
+      - "0.0.0.0:8000"
+    ports:
+      - "8000:8000"
+    restart: always
+    env_file:
+      - .env
+  app:
+    build:
+      dockerfile: ./Dockerfile
+    command:
+      - "python"
+      - "bot.py"
+      - "run"
   db:
     image: postgres:15
     container_name: db
